Reworked changing password and settings screens

--- a/TalentShow/app/src/main/res/layout/fragment_change_password.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_change_password.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/darkBackground"
+    tools:ignore="LabelFor"
     tools:context=".presentation.main.fragments.profile.profileSettings.changePassword.ChangePasswordFragment">
 
 
@@ -25,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/hint_text_color"
             android:textSize="17sp"
-            android:text="Ст. Пароль"
+            android:text="@string/old_password"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="14dp"
             android:layout_marginTop="14dp"
@@ -49,14 +50,15 @@
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
             android:textColor="@color/whiteText"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:background="@color/none_color"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:layout_constraintStart_toEndOf="@id/fragment_change_profile_filed1_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:importantForAutofill="no" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -78,7 +80,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/hint_text_color"
             android:textSize="17sp"
-            android:text="Нов. Пароль"
+            android:text="@string/new_password"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="14dp"
             android:layout_marginTop="14dp"
@@ -102,14 +104,15 @@
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
             android:textColor="@color/whiteText"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:background="@color/none_color"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:layout_constraintStart_toEndOf="@id/fragment_change_profile_filed2_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:importantForAutofill="no"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
