--- a/TalentShow/app/src/main/res/layout/fragment_notifications.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_notifications.xml
@@ -6,6 +6,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/darkBackground">
 
+    <ProgressBar
+        android:id="@+id/fragment_notifications_progressbar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notifications_recycler"
         android:layout_width="match_parent"
