--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBackground">
+    android:background="@color/darkBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ProgressBar
+        android:id="@+id/fragment_rating_progressbar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/fragment_casting_text1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/top_20"
         android:textSize="20sp"
         android:textColor="@color/whiteText"
         android:layout_marginStart="16dp"
         android:layout_marginTop="55dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,7 +37,7 @@
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingBottom="5dp"
-        android:paddingTop="13dp"/>
+        android:paddingTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_casting_text1"/>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
