--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -7,232 +7,165 @@
     android:layout_height="match_parent"
     android:background="@color/darkBackground"
     tools:context=".presentation.main.fragments.profile.ProfileFragment"
-    android:id="@+id/fragment_profile">
-
-    <TextView
-        android:id="@+id/fragment_profile_btn_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="600dp"
-        android:text="Редактировать"
-        android:textColor="@color/whiteText"
-        android:textSize="12sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+    android:id="@+id/fragment_profile_parent">
 
     <ImageView
         android:id="@+id/fragment_public_profile_image"
         android:layout_width="73dp"
         android:layout_height="73dp"
+        android:layout_marginTop="17dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="145dp"
-        android:layout_marginEnd="286dp"
-        android:layout_marginBottom="585dp"
         android:contentDescription="Add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/fragment_profile_edit_photo"
-        android:layout_width="30dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="595dp"
-        android:text="Ред."
-        android:textColor="@color/whiteText"
-        android:textSize="15sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <EditText
         android:text="Имя Фамилия"
-        android:background="#00000000"
-        android:enabled="false"
         android:id="@+id/fragment_public_profile_name"
-        android:layout_width="252dp"
-        android:layout_height="36dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@color/whiteText"
-        android:layout_marginTop="113dp"
-        android:layout_marginBottom="574dp"
-        android:layout_marginStart="109dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/fragment_public_profile_image"
         />
 
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/fragment_public_profile_text1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Описание"
+        android:text="@string/description"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_image"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
+    <TextView
         android:id="@+id/fragment_public_profile_description"
-        android:layout_width="343dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Описание"
+        android:text="@string/no_description"
         android:gravity="top"
         android:textSize="15sp"
+        android:visibility="invisible"
         android:textColor="@color/whiteText"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_image"
+        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_text1"
         app:layout_constraintStart_toStartOf="parent"
-        />
-
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/fragment_public_profile_video_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Загруженные видео"
+        android:layout_marginEnd="16dp"
+        android:text="@string/all_videos"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_description" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_description"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:id="@+id/fragment_public_profile_container1"
         app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
         app:layout_constraintStart_toStartOf="parent"
-        >
-
+        app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2"
+        app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container3">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/fragment_public_profile_video_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-
-            app:resize_mode="zoom"
-
-            />
-
-
-
-
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         android:id="@+id/fragment_public_profile_container2"
         app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1"
-        >
-
-
+        app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container4"
+        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/fragment_public_profile_video_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            app:resize_mode="zoom"
-            />
-
-
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
-
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:id="@+id/fragment_public_profile_container3"
         app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container1"
         app:layout_constraintStart_toStartOf="parent"
-        >
-
-
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container4">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/fragment_public_profile_video_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-
-            app:resize_mode="zoom"
-            />
-
-
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
         android:id="@+id/fragment_public_profile_container4"
-        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container1"
+        app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1"
-        >
-
-
+        app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container3"
+        app:layout_constraintBottom_toTopOf="@id/guideline">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/fragment_public_profile_video_4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            
-            app:resize_mode="zoom"
-            />
-
-
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
