--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -69,7 +69,7 @@
         android:textColor="@color/whiteText"
         android:text="@string/auth"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_auth_guideline"
+        app:layout_constraintTop_toBottomOf="@id/fragment_auth_logo"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/auth_filed_backgroud"
         app:layout_constraintTop_toBottomOf="@id/fragment_auth_text1"
         app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +184,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="93dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/buttons_background"
         android:textSize="17sp"
         android:gravity="center"
@@ -192,7 +193,8 @@
         android:textColor="@color/whiteText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_auth_field_2"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/fragment_auth_guideline"
