--- a/TalentShow/app/src/main/res/layout/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_registration.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/darkBackground"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <ProgressBar
         android:id="@+id/fragment_registration_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fragment_reg_back"
@@ -23,28 +23,29 @@
         android:layout_marginStart="9dp"
         android:layout_marginTop="18dp"
         android:padding="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <View
             android:id="@+id/fragment_reg_arrow"
             android:layout_width="12dp"
             android:layout_height="20dp"
             android:background="@drawable/blue_arrow_back"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:textColor="@color/whiteText"
-            android:textSize="17sp"
-            android:text="@string/back"
-            android:gravity="center|top"
-            android:layout_marginStart="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:gravity="center|top"
+            android:text="@string/back"
+            android:textColor="@color/whiteText"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/fragment_reg_arrow"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
@@ -52,10 +53,10 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/logo"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_back"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fragment_reg_text1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fragment_reg_guideline"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_back" />
 
     <TextView
         android:id="@+id/fragment_reg_text1"
@@ -64,39 +65,41 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="14dp"
-        android:textSize="34sp"
         android:gravity="center"
-        android:textColor="@color/whiteText"
         android:text="@string/sign_up"
+        android:textColor="@color/whiteText"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@id/fragment_reg_field_1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_guideline"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_logo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fragment_reg_field_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/auth_filed_backgroud"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_text1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_text1">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
+            android:gravity="start"
+            android:text="@string/name"
             android:textColor="@color/hint_text_color"
             android:textSize="17sp"
-            android:text="@string/name"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="14dp"
-            android:layout_marginTop="14dp"
-            android:gravity="start"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_filed1_guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fragment_filed1_guideline"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/fragment_filed1_guideline"
@@ -110,18 +113,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:textSize="17sp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/none_color"
+            android:hint="@string/enter_ur_name"
             android:paddingTop="5dp"
             android:singleLine="true"
-            android:hint="@string/enter_ur_name"
-            android:textColorHint="@color/hint_text_color"
-            android:layout_marginBottom="5dp"
             android:textColor="@color/whiteText"
-            android:background="@color/none_color"
-            app:layout_constraintStart_toEndOf="@id/fragment_filed1_guideline"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColorHint="@color/hint_text_color"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_filed1_guideline"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -130,26 +133,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="14dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/auth_filed_backgroud"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_1">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
+            android:gravity="start"
+            android:text="@string/email"
             android:textColor="@color/hint_text_color"
             android:textSize="17sp"
-            android:text="@string/email"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="14dp"
-            android:layout_marginTop="14dp"
-            android:gravity="start"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_filed2_guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fragment_filed2_guideline"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/fragment_filed2_guideline"
@@ -163,18 +167,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:textSize="17sp"
-            android:textColor="@color/whiteText"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:inputType="textEmailAddress"
             android:background="@color/none_color"
             android:hint="@string/enter_ur_mail"
+            android:inputType="textEmailAddress"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textColor="@color/whiteText"
             android:textColorHint="@color/hint_text_color"
-            app:layout_constraintStart_toEndOf="@id/fragment_filed2_guideline"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_filed2_guideline"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -235,41 +239,34 @@
         android:id="@+id/fragment_registration_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
         android:layout_marginStart="45dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/i_accept_terms"
         android:textColor="@color/regGrayColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/fragment_reg_continue"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_3"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_3" />
 
     <TextView
         android:id="@+id/fragment_reg_continue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/buttons_background"
-        android:textSize="17sp"
         android:gravity="center"
         android:text="@string/to_sign_in"
         android:textColor="@color/whiteText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_registration_text1"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/fragment_reg_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.35" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_registration_text1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
